--- a/src/Components/MyShifts.module.scss
+++ b/src/Components/MyShifts.module.scss
@@ -1,22 +1,34 @@
-.pageTitle {
-    text-align: center;
+@media screen and (max-width: 480px) {
+  .shiftsContainer {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
-.weekday {
-    text-align: center;
-    color: darkGreen;
-    font-size: 20px;
-}
-
-.weekOfTitle {
-    text-align: center;
-    color: lightBlue;
-    font-size: 20px;
-}
-
-.gridContainer {
+@media screen and (min-width: 480px) {
+  .shiftsContainer {
     display: grid;
     gap: 5px;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     margin: 0px 30px 0px 30px;
+  }
+}
+body {
+  background-color: rgb(207, 250, 207);
+}
+
+.pageTitle {
+  text-align: center;
+}
+
+.weekday {
+  text-align: center;
+  color: darkGreen;
+  font-size: 20px;
+}
+
+.weekOfTitle {
+  text-align: center;
+  color: lightBlue;
+  font-size: 20px;
 }
