added styling for allshift

--- a/src/Components/SingleAllShift.module.scss
+++ b/src/Components/SingleAllShift.module.scss
@@ -11,3 +11,12 @@
       background-color: white;
       border: 3px solid green;
 }
+
+
+.filled {
+    background-color: lightgreen;
+}
+
+.empty {
+    background-color: lightpink;
+}
