add modal styling and other small changes, possible mistake with body to .body in some files

--- a/src/Components/AddShiftModal.module.scss
+++ b/src/Components/AddShiftModal.module.scss
@@ -22,7 +22,7 @@
 .overlay {
     background: rgba(49,49,49,0.8);
 }
-.modal-content {
+.modalContent {
     position: absolute;
     top: 40%;
     left: 50%;
