--- a/src/Components/AllShifts.module.scss
+++ b/src/Components/AllShifts.module.scss
@@ -5,8 +5,8 @@
   margin: 0px 30px 0px 30px;
 }
 
-body {
-  background-color: rgb(207, 250, 207);
+.body {
+  background-color: rgb(33, 46, 111);
 }
 
 .pageTitle {
