--- a/src/Components/EditShiftModal.module.scss
+++ b/src/Components/EditShiftModal.module.scss
@@ -2,7 +2,7 @@
     overflow-y: hidden;
 }
 
-.btn-modal {
+.btnModal {
     padding: 10px 20px;
     display: block;
     margin: 100px auto 0;
@@ -22,7 +22,7 @@
 .overlay {
     background: rgba(49,49,49,0.8);
 }
-.modal-content {
+.modalContent {
     position: absolute;
     top: 40%;
     left: 50%;
@@ -35,7 +35,7 @@
     min-width: 300px;
 }
 
-.close-modal {
+.closeModal {
     position: absolute;
     top: 10px;
     right: 10px;
