--- a/src/Components/MyShifts.module.scss
+++ b/src/Components/MyShifts.module.scss
@@ -11,6 +11,8 @@
     gap: 5px;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     margin: 0px 30px 0px 30px;
+    border: 5px solid blue;
+    min-height: 500px;
   }
 }
 .body {
