minor refactoring in myperms

--- a/src/Components/SingleAllPerm.module.scss
+++ b/src/Components/SingleAllPerm.module.scss
@@ -9,6 +9,7 @@
       height: 50;
       padding: 5px;
       background-color: white;
-      border: 3px solid green;
+      border: 1px solid green;
+      border-radius: 5px;
 }
 
