--- a/src/Components/AllPerms.module.scss
+++ b/src/Components/AllPerms.module.scss
@@ -5,3 +5,21 @@
     margin: 50px;
     justify-content: space-around;
 }
+
+@media screen and (max-width: 480px) {
+    .shiftsContainer {
+      display: flex;
+      flex-direction: column;
+    }
+  }
+
+@media screen and (min-width: 480px) {
+    .shiftsContainer {
+      display: grid;
+      gap: 5px;
+      grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+      margin: 0px 30px 0px 30px;
+      border: 5px solid blue;
+      min-height: 500px;
+    }
+  }
